sdk/model-manager/include/geniex_model.h

/* ============================================================
 *  Model type
 * ============================================================ */

typedef enum {
    GENIEX_MODEL_TYPE_LLM = 0,
    GENIEX_MODEL_TYPE_VLM = 1,
} geniex_ModelType;
/* ============================================================
 *  Query (plan without downloading)
 * ============================================================ */

/**
 * @brief One quantization advertised by the source for a model.
 *
 * `quant` is heap-allocated; freed by geniex_model_query_free().
 */
typedef struct {
    char*   quant; /**< Quantization name, e.g. "Q4_K_M".                  */
    int64_t size;  /**< Size in bytes of the largest file for this quant. */
} geniex_QuantCandidate;
/**
 * @brief Result of geniex_model_query.
 *
 * All non-NULL char* fields and the `candidates` array are heap-allocated;
 * free with geniex_model_query_free().
 */
typedef struct {
    char*                  model_name; /**< Architecture name.            */
    char*                  plugin_id;  /**< Plugin ID, e.g. "llama_cpp".  */
    geniex_ModelType       model_type;
    geniex_QuantCandidate* candidates;
    int32_t                candidate_count;
} geniex_ModelQueryOutput;
/* ============================================================
 *  Chipset
 * ============================================================ */

/**
 * @brief One chipset AI Hub publishes assets for.
 *
 * `name` and the `aliases` array are heap-allocated; free the enclosing
 * list with geniex_model_list_chipsets_free().
 */
typedef struct {
    char*  name;         /**< Reference device, e.g. "Snapdragon X Elite CRD". */
    char** aliases;      /**< Accepted aliases, incl. the canonical id
                          *   "qualcomm-snapdragon-x-elite" and "sm8650".   */
    int32_t alias_count; /**< Length of `aliases`.                          */
} geniex_ChipsetInfo;
typedef struct {
    geniex_ChipsetInfo* chipsets;
    int32_t             count;
} geniex_ChipsetList;
/* ============================================================
 *  Hub model catalogue
 * ============================================================ */

/**
 * @brief One Qualcomm AI Hub model geniex can run (qairt / NPU).
 *
 * `name` and the `chipsets` array are heap-allocated; free the enclosing
 * list with geniex_model_list_hub_free().
 */
typedef struct {
    char*            name;          /**< Pullable name, e.g. "qualcomm/Qwen3-4B". */
    geniex_ModelType model_type;    /**< LLM or VLM.                              */
    char**           chipsets;      /**< Canonical chipset ids the model runs on. */
    int32_t          chipset_count; /**< Length of `chipsets`.                    */
} geniex_HubModelInfo;
typedef struct {
    geniex_HubModelInfo* models;
    int32_t              count;
} geniex_HubModelList;