bindings/python/geniex/_ffi/_types.py


class geniex_ModelQueryOutput(Structure):
    _fields_ = [
        ('model_name', c_char_p),
        ('plugin_id', c_char_p),
        ('model_type', c_int32),
        ('candidates', POINTER(geniex_QuantCandidate)),
        ('candidate_count', c_int32),
    ]


class geniex_ChipsetInfo(Structure):
    _fields_ = [
        ('name', c_char_p),
        ('aliases', POINTER(c_char_p)),
        ('alias_count', c_int32),
    ]


class geniex_ChipsetList(Structure):
    _fields_ = [
        ('chipsets', POINTER(geniex_ChipsetInfo)),
        ('count', c_int32),
    ]


class geniex_HubModelInfo(Structure):
    _fields_ = [
        ('name', c_char_p),
        ('model_type', c_int32),
        ('chipsets', POINTER(c_char_p)),
        ('chipset_count', c_int32),
    ]


class geniex_HubModelList(Structure):
    _fields_ = [
        ('models', POINTER(geniex_HubModelInfo)),
        ('count', c_int32),
    ]
